<resources>
    <string name="app_name">Meetmax</string>
    <string name="baseUrlPost">https://jsonplaceholder.typicode.com/</string>
    <string name="baseUrlUser">https://reqres.in/api/</string>
    <string name="status_public">Public</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="username">Username</string>
    <string name="search_for_something_here">Search for something here...</string>
    <string name="first_name">First Name</string>
    <string name="getting_started">Getting Started</string>
    <string name="create_an_account_msg">Create an account to continue and connect with the people.</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="log_in_with_apple">Log in with Apple</string>
    <string name="or">OR</string>
    <string name="your_email">Your Email</string>
    <string name="your_name">Your Name</string>
    <string name="create_password">Create Password</string>
    <string name="password_regex_alert">Password must contain at least 1 digit, 1 upper case, 1 lower case, 1 special character and minimum 8 characters.</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="sign_up">Sign Up</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="welcome_back_msg">Welcome back, you\'\ve been missed!</string>
    <string name="you_haven_t_any_account">You haven\'\t any account?</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_pass_msg">Enter your details to receive a rest link.</string>
    <string name="send">Send</string>
    <string name="back_to_sign_in">Back to Sign In</string>
    <string name="undone_because_of_limited_resources">* Feature incomplete because of limited resources. *</string>
    <string name="what_s_happening">What\'s happening?</string>
    <string name="post">Post</string>
    <string name="live">Live</string>
    <string name="feeling">Feeling</string>
    <string name="photo">Photo</string>
    <string name="create_a_post">Create a post</string>
    <string name="visible_for">Visible for</string>
    <string name="friends">Friends</string>
    <string name="live_video">Live Video</string>
    <string name="sample_email">eve.holt@reqres.in</string>
</resources>
