<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:paddingBottom="@dimen/_20sdp"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:orientation="horizontal"
                    android:gravity="center|start"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/app_logo_icon"
                        android:layout_gravity="center|start"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:gravity="center"
                        android:text="@string/app_name"
                        android:textSize="16sp"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/grey_800"
                        android:layout_marginStart="@dimen/_5sdp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:paddingTop="@dimen/_20sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|end"
                        android:gravity="center"
                        android:text="@string/forgot_password"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/grey_800"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|end"
                        android:gravity="center"
                        android:text="@string/forgot_pass_msg"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/grey_800"
                        android:layout_margin="@dimen/_10sdp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/your_email"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_30sdp"
                        app:boxStrokeColor="@color/box_stroke_color"
                        android:textColorHint="@color/hint_text_color_grey_blue">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/enterEmailAddress"
                            android:inputType="textEmailAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/grey_800"
                            android:textSize="14sp"
                            android:padding="@dimen/_10sdp"
                            android:drawableTint="@color/grey_700"
                            android:drawableStart="@drawable/baseline_alternate_email_24"
                            android:drawablePadding="@dimen/_10sdp"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:visibility="gone"
                        android:id="@+id/undoneMsg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|end"
                        android:gravity="center"
                        android:text="@string/undone_because_of_limited_resources"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/grey_500"
                        android:layout_margin="@dimen/_10sdp"
                        android:padding="@dimen/_5sdp"/>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp">

                        <TextView
                            android:id="@+id/sendOtp"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_35sdp"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:textColor="@color/white"
                            android:background="@drawable/blue_curved_rectangle"
                            android:text="@string/send"
                            android:textAllCaps="false"
                            android:layout_margin="@dimen/_15sdp" />

                        <ProgressBar
                            android:visibility="gone"
                            android:id="@+id/progressBar"
                            android:layout_width="@dimen/_22sdp"
                            android:layout_height="@dimen/_22sdp"
                            android:layout_gravity="center"
                            android:indeterminateTint="@color/white"/>

                    </FrameLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/backToSignin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/back_to_sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/special_blue"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_20sdp"
                    app:drawableStartCompat="@drawable/baseline_keyboard_arrow_left_24"
                    app:drawableTint="@color/special_blue"
                    android:drawablePadding="@dimen/_5sdp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </FrameLayout>

</FrameLayout>
