<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/grey_100"
    tools:context=".presentation.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_gravity="center"
        android:padding="@dimen/_7sdp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/userAvatar"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            app:riv_corner_radius="@dimen/_10sdp"
            android:src="@drawable/sample_profile_avatar"
            android:padding="@dimen/_3sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:weightSum="100">

            <EditText
                android:id="@+id/userName"
                android:layout_width="0dp"
                android:layout_weight="80"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/white_rectangle_black_stroke"
                android:hint="@string/search_for_something_here"
                android:textSize="12sp"
                android:textColor="@color/grey_800"
                android:drawableStart="@drawable/baseline_search_24"
                android:drawableTint="@color/grey_700"
                android:gravity="center|start"
                android:padding="@dimen/_5sdp"/>

            <ImageView
                android:id="@+id/sendComment"
                android:layout_width="0dp"
                android:layout_weight="20"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:src="@drawable/outline_chat_24"
                android:padding="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                app:tint="@color/special_blue" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_marginTop="@dimen/_10sdp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/usersList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_margin="@dimen/_5sdp"/>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_marginTop="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:layout_gravity="center"
                android:padding="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/sample_profile_avatar"
                        android:background="@drawable/grey_circle" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_gravity="center"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/enterPost"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_32sdp"
                            android:background="@drawable/grey_curved_rectangle"
                            android:text="@string/what_s_happening"
                            android:textSize="12sp"
                            android:textColor="@color/grey_800"
                            android:gravity="center|start"
                            android:padding="@dimen/_7sdp"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:weightSum="100">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="20"
                        android:layout_height="@dimen/_30sdp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:textColor="@color/grey_700"
                        android:text="@string/live"
                        android:textStyle="bold"
                        android:textAllCaps="false"
                        app:drawableStartCompat="@drawable/outline_video_camera_back_24"
                        app:drawableTint="@color/grey_700"
                        android:layout_margin="@dimen/_5sdp"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="25"
                        android:layout_height="@dimen/_30sdp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:textColor="@color/grey_700"
                        android:text="@string/photo"
                        android:textStyle="bold"
                        android:textAllCaps="false"
                        app:drawableStartCompat="@drawable/outline_image_24"
                        app:drawableTint="@color/grey_700"
                        android:layout_margin="@dimen/_5sdp"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="25"
                        android:layout_height="@dimen/_30sdp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:textColor="@color/grey_700"
                        android:text="@string/feeling"
                        android:textStyle="bold"
                        android:textAllCaps="false"
                        app:drawableStartCompat="@drawable/outline_tag_faces_24_happy"
                        app:drawableTint="@color/grey_700"
                        android:layout_margin="@dimen/_5sdp"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="10"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/postNow"
                        android:layout_width="0dp"
                        android:layout_weight="20"
                        android:layout_height="@dimen/_30sdp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:background="@drawable/blue_curved_rectangle"
                        android:text="@string/post"
                        android:textAllCaps="false"/>

                </LinearLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/postList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_gravity="center"/>

</LinearLayout>
